manifests/whoami/nginx/whoami-nginx.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whoami-ns
  labels:
    name: whoami-ns

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-nginx-app
  namespace: whoami-ns
spec:
  selector:
    matchLabels:
      name: test-nginx-backend
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        name: test-nginx-backend
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: run
                  operator: In
                  values:
                  - nginx
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - name: backend
        image: containous/whoami:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      nodeSelector:
        web: "true"

---
apiVersion: v1
kind: Service
metadata:
  name: test-nginx-service
  namespace: whoami-ns
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    name: test-nginx-backend

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-nginx-ingress
  namespace: whoami-ns
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-nginx-service
            port:
              number: 80
